<resources>
    <string name="PERSONAL_MAIN_SV_HINT">Text</string>
    <string name="PERSONAL_MAIN_BUTTON_PERSONAL">Personal</string>
    <string name="PERSONAL_MAIN_BUTTON_COUNSELOR">Counselor</string>
    <string name="PERSONAL_MAIN_BUTTON_COMPANY">Company</string>
    <string name="PERSONAL_MAIN_BUTTON_Skill">Knowledge Contest</string>
    <string name="PERSONAL_MAIN_BUTTON_USERCENTER">User Center</string>
    <string name="PERSONAL_MAIN_BUTTON_SERVICE">Service</string>
    <string name="PERSONAL_MAIN_BUTTON_NEWS">News</string>
    <string name="PERSONAL_MAIN_BUTTON_ABOUT">About</string>
    <string name="PERSONAL_MAIN_BUTTON_HELP">Help</string>
    <string name="PERSONAL_HOME_TV_TITLE">HOME</string>
    <string name="COUNSELOR_HOME_TV_TITLE">Countselor Home Page</string>
    <string name="ENTERPRISE_HOME_TV_TITLE">Enterprise Home Page</string>
    <string name="COMPANY_HOME_TV_TITLE">Company Home Page</string>
    <string name="SKILL_HOME_TV_TITLE">Skill Page Home</string>
    <string name="USERCENTER_HOME_TV_TITLE">UserCenter Home Page</string>
    <string name="SERVICE_HOME_TV_TITLE">Service Page Home</string>
    <string name="NEWS_HOME_TV_TITLE">New Home Page</string>
    <string name="HELP_HOME_TV_TITLE">Help Home Page</string>
    <string name="TITLE_COMPANY_INFO">Company Information</string>
    <string name="COMPANY_INFO_BACK">Back</string>
    <string name="COMPANY_INFO_EDIT">Edit</string>
    <string name="SOCIETY_EVOLUTION_INFO_BACK">Back</string>
    <string name="TITLE_SOCIETY_EVOLUTION">Society Evolution</string>
    <string name="SOCIETY_EVOLUTION_ADD">Add</string>
    <string name="SOCIETY_EVOLUTION_EDIT_BACK">Back</string>
    <string name="TITLE_SOCIETY_EVOLUTION_EDIT">Edit Society Evolution</string>
    <string name="SOCIETY_EVOLUTION_EDIT_SAVE">Save</string>
    <string name="PARTNER_RECRUIT_BACK">Back</string>
    <string name="TITLE_PARTNER_RECRUIT">Partner Recruit</string>
    <string name="PARTNER_RECRUIT_EDIT">Edit</string>
    <string name="WORK_INFO_BACK">Back</string>
    <string name="TITLE_WORK_INFO">Job Information</string>
    <string name="WORK_INFO_ADD">Add</string>
    <string name="WORK_INFO_EDIT_SAVE">Save</string>
    <string name="TITLE_WORK_INFO_EDIT">Edit Job Information</string>
    <string name="WORK_INFO_EDIT_BACK">Back</string>
    <string name="ACCESS_BACK">Back</string>
    <string name="TITLE_ACCESS">Access</string>
    <string name="ACCESS_EDIT">Edit</string>
    <string name="TITLE_CONSULTING">Consulting</string>
    <string name="CONSULTING_SEND">Send</string>
    <string name="PARTNER_ENLISTED_BACK">Back</string>
    <string name="TITLE_PARTNER_ENLISTED">Partner Enlisted</string>
    <string name="PARTNER_ENLISTED_SEND">Send</string>
    <string name="BASIC_CONSULTANT_BACK">Back</string>
    <string name="TITLE_BASIC_CONSULTANT">Basic Information</string>
    <string name="BASIC_CONSULTANT_EDIT">Edit</string>
    <string name="BASIC_CONSULTANT_NAME">Consultant Name</string>
    <string name="BASIC_CONSULTANT_RESUME">Personal Details</string>
    <string name="BASIC_CONSULTANT_AFFIRM">Confirm</string>
    <string name="BASIC_CONSULTANT_CANCEL">Cancel</string>
    <string name="DIPLOMA_CONSULTANT_BACK">Back</string>
    <string name="TITLE_DIPLOMA_CONSULTANT">Education Record</string>
    <string name="DIPLOMA_CONSULTANT_ADD">Add</string>
    <string name="DIPLOMA_EDIT_CONSULTANT_BACK">Back</string>
    <string name="TITLE_DIPLOMA_EDIT_CONSULTANT">Edit Diploma</string>
    <string name="DIPLOMA_EDIT_CONSULTANT_SAVE">Save</string>
    <string name="WORK_EXP_CONSULTANT_BACK">Back</string>
    <string name="TITLE_WORK_EXP_CONSULTANT">Work Experience</string>
    <string name="WORK_EXP_CONSULTANT_ADD">Add</string>
    <string name="WORK_EXP_EDIT_CONSULTANT_BACK">Back</string>
    <string name="TITLE_WORK_EXP_EDIT_CONSULTANT">Edit Work Experience</string>
    <string name="WORK_EXP_EDIT_CONSULTANT_SAVE">Save</string>
    <string name="ENTERPRISE_SEARCH_CONSULTANT_BACK">Back</string>
    <string name="TITLE_ENTERPRISE_SEARCH_CONSULTANT">Enterprise Search</string>
    <string name="ENTERPRISE_SEARCH_CONSULTANT_SEARCH">Search</string>
    <string name="ENTERPRISE_SEARCH_RESULT_CONSULTANT_BACK">Back</string>
    <string name="TITLE_ENTERPRISE_SEARCH_RESULT_CONSULTANT">Enterprise Search Result</string>
    <string name="ENTERPRISE_BASIC_INFO_BACK">Back</string>
    <string name="TITLE_ENTERPRISE_BASIC_INFO">Enterprise Basic Information</string>
    <string name="ENTERPRISE_BASIC_INFO_EDIT">Edit</string>
    <string name="ENTERPRISE_EXP_BACK">Back</string>
    <string name="TITLE_ENTERPRISE_EXP">Enterprise Resume</string>
    <string name="ENTERPRISE_EXP_EDIT">Edit</string>
    <string name="ENTERPRISE_EXP_EDIT_BACK">Back</string>
    <string name="TITLE_ENTERPRISE_EXP_EDIT">Edit Enterprise Resume</string>
    <string name="EDIT_ENTERPRISE_EXP_ADD">Add</string>
    <string name="BUSINESS_ENTERPRISE_BACK">Back</string>
    <string name="TITLE_BUSINESS_ENTERPRISE">Business</string>
    <string name="BUSINESS_ENTERPRISE_ADD">Add</string>
    <string name="EDIT_BUSINESS_ENTERPRISE_BACK">Back</string>
    <string name="TITLE_EDIT_BUSINESS_ENTERPRISE">Edit Business</string>
    <string name="EDIT_BUSINESS_ENTERPRISE_ADD">Add</string>
    <string name="JOB_INDICATE_ENTERPRISE_BACK">Back</string>
    <string name="TITLE_JOB_INDICATE_ENTERPRISE">Indicate Jobs</string>
    <string name="JOB_INDICATE_ENTERPRISE_ADD">Add</string>
    <string name="EDIT_JOB_INDICATE_ENTERPRISE_BACK">Back</string>
    <string name="TITLE_EDIT_JOB_INDICATE_ENTERPRISE">Edit Job Indicate</string>
    <string name="EDIT_JOB_INDICATE_ENTERPRISE_ADD">Add</string>
    <string name="ENLIST_ENTERPRISE_BACK">Back</string>
    <string name="ENLIST_ENTERPRISE">Enlist</string>
    <string name="ENLIST_ENTERPRISE_SEND">Send</string>
    <string name="SEARCH_CONSULTANT_ENTERPRISE_BACK">Back</string>
    <string name="TITLE_SEARCH_CONSULTANT_ENTERPRISE">Search Consultant</string>
    <string name="SEARCH_CONSULTANT_ENTERPRISE_SEARCH">Search</string>
    <string name="SEARCH_RESULT_ENTERPRISE_BACK">Back</string>
    <string name="TITLE_SEARCH_RESULT_ENTERPRISE">Consultant Search Result</string>
    <string name="EDU_RECORD_PERSONAL_BACK">Back</string>
    <string name="TITLE_EDU_RECORD_PERSONAL">Education Record</string>
    <string name="EDU_RECORD_PERSONAL_ADD">Add</string>
    <string name="EDIT_EDU_RECORD_PERSONAL_BACK">Back</string>
    <string name="TITLE_EDIT_EDU_RECORD_PERSONAL">Edit Education Record</string>
    <string name="EDIT_EDU_RECORD_PERSONAL_SAVE">Save</string>
    <string name="TITLE_WORK_RECORD_PERSONAL">Back</string>
    <string name="WORK_RECORD_PERSONAL_ADD">Add</string>
    <string name="EDIT_WORK_RECORD_PERSONAL_BACK">Back</string>
    <string name="TITLE_EDIT_WORK_RECORD_PERSONAL">Edit Work Record</string>
    <string name="EDIT_WORK_RECORD_PERSONAL_SAVE">Save</string>
    <string name="SEARCH_JOB_PERSONAL_BACK">Back</string>
    <string name="TITLE_SEARCH_JOB_PERSONAL">Search Job</string>
    <string name="SEARCH_JOB_PERSONAL_SEARCH">Search</string>
    <string name="SEARCH_RESULT_PERSONAL_BACK">Back</string>
    <string name="TITLE_SEARCH_RESULT_PERSONAL">Job Retrieved Result</string>
    <string name="CLASSIFY_SKILL_BACK">Back</string>
    <string name="TITLE_CLASSIFY_SKILL">Knowledge Classify</string>
    <string name="LEARNING_RECORD_SKILL_BACK">Back</string>
    <string name="TITLE_LEARNING_RECORD_SKILL">Leraning Curriculum</string>
    <string name="TEST_SKILL_BACK">Back</string>
    <string name="TITLE_TEST_SKILL">Test</string>
    <string name="RANKING_SKILL_BACK">Back</string>
    <string name="TITLE_RANKING_SKILL">Ranking</string>
    <string name="BASIC_PERSONAL_BACK">Back</string>
    <string name="TITLE_BASIC_PERSONAL">Personal Basic Information</string>
    <string name="BASIC_PERSONAL_EDIT">Edit</string>
    <string name="BASIC_PERSONAL_NAME">Personal Name</string>
    <string name="BASIC_PERSONAL_STATION">Station</string>
    <string name="BASIC_PERSONAL_AGE">Age</string>
    <string name="BASIC_PERSONAL_AFFIRM">Confirm</string>
    <string name="BASIC_PERSONAL_CANCEL">Cancel</string>
    <string name="PERSONAL_BASIC_SKILL_BACK">Back</string>
    <string name="TITLE_PERSONAL_BASIC_SKILL">Personal Basic Information</string>
    <string name="PERSONAL_BASIC_SKILL_NAME">Personal Name</string>
    <string name="PERSONAL_BASIC_SKILL_AGE">Age</string>
    <string name="PERSONAL_BASIC_SKILL_STATION">Station</string>
    <string name="USERNAME_LOGIN_USER_CENTER">UserName</string>
    <string name="PASSWORD_LOGIN_USER_CENTER">Password</string>
    <string name="LOGIN_LOGIN_USER_CENTER">Login</string>
    <string name="CANCEL_LOGIN_USER_CENTER">Cancel</string>
    <string name="LOGIN_USER_CENTER_BACK">Back</string>
    <string name="TITLE_LOGIN_USER_CENTER">Login</string>
    <string name="BASIC_INFO_USER_CENTER_BACK">Back</string>
    <string name="TITLE_BASIC_INFO_USER_CENTER">Basic Information</string>
    <string name="BASIC_INFO_USER_CENTER_EDIT">Edit</string>
    <string name="USERID_BASIC_INFO_USER_CENTER">User ID</string>
    <string name="BASIC_INFO_USER_CENTER_PERSONAL_ACT">Personal Operation</string>
    <string name="BASIC_INFO_USER_CENTER_CONSULTANT_ACT">Consultant Operation</string>
    <string name="BASIC_INFO_USER_CENTER_ENTERPRISE_ACT">Enterprise Operation</string>
    <string name="BASIC_INFO_USER_CENTER_EMAIL">Email</string>
    <string name="BASIC_INFO_USER_CENTER_TEL">Phone Number</string>
    <string name="BASIC_INFO_USER_CENTER_CONFIRM">Confirm</string>
    <string name="BASIC_INFO_USER_CENTER_CANCEL">Cancel</string>
    <string name="CHANGE_PWD_USER_CENTER_BACK">Back</string>
    <string name="TITLE_CHANGE_PWD_USER_CENTER">Change Password</string>
    <string name="OLD_PASSWORD_CHANGE_PWD_USER_CENTER">Old Password</string>
    <string name="NEW_PASSWORD_CHANGE_PWD_USER_CENTER">New Password</string>
    <string name="AGAIN_PASSWORD_CHANGE_PWD_USER_CENTER">New Password (again)</string>
    <string name="CHANGE_PWD_USER_CENTER_CONFIRM">Confirm</string>
    <string name="CHANGE_PWD_USER_CENTER_CANCEL">Cancel</string>
    <string name="POINT_USER_CENTER_BACK">Back</string>
    <string name="TITLE_POINT_USER_CENTER">Manage Point</string>
    <string name="AMOUNT_POINT_USER_CENTER">Points</string>
    <string name="BANK_ACCOUNT_POINT_USER_CENTER">Book Account</string>
    <string name="BANK_NAME_CHANGE_PWD_USER_CENTER">Bank Name</string>
    <string name="BRANCH_POINT_USER_CENTER">Branch Name</string>
    <string name="POINT_USER_CENTER_DEPOSIT">Deposit</string>
    <string name="POINT_USER_CENTER_WITHDRAW">Withdraw</string>
    <string name="POINT_USER_CENTER_CANCEL">Cancel</string>
    <string name="FORGOT_PWD_USER_CENTER_BACK">Back</string>
    <string name="TITLE_FORGOT_PWD_USER_CENTER">Forgot Password</string>
    <string name="USER_ID_FORGOT_PWD_USER_CENTER">User ID</string>
    <string name="EMAIL_FORGOT_PWD_USER_CENTER">Email</string>
    <string name="FORGOT_PWD_USER_CENTER_SEND">Send</string>
    <string name="FORGOT_PWD_USER_CENTER_CANCEL">Cancel</string>
    <string name="RECOMMEND_USER_CENTER_BACK">Back</string>
    <string name="TITLE_RECOMMEND_USER_CENTER">Friends Recommend</string>
    <string name="USER_ID_RECOMMEND_USER_CENTER">User ID</string>
    <string name="EMAIL_RECOMMEND_USER_CENTER">Friend\"s Email</string>
    <string name="RECOMMEND_USER_CENTER_SEND">Send</string>
    <string name="RECOMMEND_USER_CENTER_CANCEL">Cancel</string>
    <string name="SETTING_USER_CENTER_BACK">Back</string>
    <string name="SETTING_USER_CENTER_EDIT">Edit</string>
    <string name="TITLE_SETTING_USER_CENTER">Setting</string>
    <string name="USER_ID_SETTING_USER_CENTER">User ID</string>
    <string name="PERSONAL_HOME_LIST_BASIC_INFO">Basic Information</string>
    <string name="PERSONAL_HOME_LIST_EDU_RECORD">Educational Record</string>
    <string name="PERSONAL_HOME_LIST_WORK_RECORD">Work Record</string>
</resources>