<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/abs__background_holo_light"
            android:orientation="horizontal"
            android:weightSum="1">

        <Button
                android:id="@+id/btnBack_Point_UserCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/POINT_USER_CENTER_BACK"
                android:layout_gravity="center"
                android:layout_weight="0.42"/>

        <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/TITLE_POINT_USER_CENTER"
                android:textColor="@color/default_black_color"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
        />

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_margin="5dp"
                android:paddingLeft="50dp"
                android:text="@string/AMOUNT_POINT_USER_CENTER"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

        <EditText
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPoints_Point_UserCenter"
        />
        <TextView
                android:layout_margin="5dp"
                android:paddingLeft="50dp"
                android:text="@string/BANK_ACCOUNT_POINT_USER_CENTER"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

        <EditText
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etBankAccount_Point_UserCenter"
        />
        <TextView
                android:layout_margin="5dp"
                android:paddingLeft="50dp"
                android:text="@string/BANK_NAME_CHANGE_PWD_USER_CENTER"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

        <EditText
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etBankName_Point_UserCenter"
        />
        <TextView
                android:layout_margin="5dp"
                android:paddingLeft="50dp"
                android:text="@string/BRANCH_POINT_USER_CENTER"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

        <EditText
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etBranchName_Point_UserCenter"
        />


    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:id="@+id/btnDeposit_Point_UserCenter"
                android:text="@string/POINT_USER_CENTER_DEPOSIT"
                android:layout_gravity="bottom"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
        />
        <Button
                android:id="@+id/btnWithdraw_Point_UserCenter"
                android:text="@string/POINT_USER_CENTER_WITHDRAW"
                android:layout_gravity="bottom"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
        />
        <Button
                android:id="@+id/btnCancel_Point_UserCenter"
                android:text="@string/POINT_USER_CENTER_CANCEL"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
        />

    </LinearLayout>
</LinearLayout>