<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/abs__background_holo_light"
            android:orientation="horizontal"
            android:weightSum="1">

        <Button
                android:id="@+id/btnBack_Login_UserCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/LOGIN_USER_CENTER_BACK"
                android:layout_gravity="center"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TITLE_LOGIN_USER_CENTER"
                android:textColor="@color/default_black_color"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
        />

    </LinearLayout>

    <TextView
            android:id="@+id/tvUserName_Login_UserCenter"
            android:text="@string/USERNAME_LOGIN_USER_CENTER"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
    />
    <EditText
            android:layout_width="match_parent"
            android:id="@+id/etUserName_Login_UserCenter"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvPassword_Login_UserCenter"
            android:text="@string/PASSWORD_LOGIN_USER_CENTER"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/etPassword_Login_userCenter"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin_Login_UserCenter"
                android:text="@string/LOGIN_LOGIN_USER_CENTER"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:layout_gravity="bottom"
        />
        <Button
                android:id="@+id/btnCancel_Login_UserCenter"
                android:text="@string/CANCEL_LOGIN_USER_CENTER"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"

        />

    </LinearLayout>

</LinearLayout>