<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/abs__background_holo_light"
            android:orientation="horizontal"
            android:weightSum="1">

        <Button
                android:id="@+id/btnBack_Recommend_UserCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/RECOMMEND_USER_CENTER_BACK"
                android:layout_gravity="center"
                android:layout_weight="0.42"/>

        <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/TITLE_RECOMMEND_USER_CENTER"
                android:textColor="@color/default_black_color"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
        />

    </LinearLayout>

    <LinearLayout
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:paddingLeft="50dp"
                android:layout_margin="5dp"
                android:text="@string/USER_ID_RECOMMEND_USER_CENTER"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:layout_margin="5dp"
                android:id="@+id/etUserID_Recommend_UserCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:paddingLeft="50dp"
                android:layout_margin="5dp"
                android:text="@string/EMAIL_RECOMMEND_USER_CENTER"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:layout_margin="5dp"
                android:id="@+id/etEmail_Recommend_UserCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:id="@+id/btnSend_Recommend_UserCenter"
                android:text="@string/RECOMMEND_USER_CENTER_SEND"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_marginRight="50dp"
        />
        <Button
                android:id="@+id/btnCancel_Recommend_UserCenter"
                android:text="@string/RECOMMEND_USER_CENTER_CANCEL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_marginLeft="50dp"
        />

    </LinearLayout>

</LinearLayout>